# osm-dashboard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.base  README.md  pyproject.toml
.github/workflows/: build-docker.yml  deploy-docker.yml  docker-up.yml
dashboard/: __main__.py  app.py  charts.py  data.py
dashboard/data/: metadata.json
docs/: MIGRATION.md
scripts/: set-github-secrets.sh
web/dashboard/: Dockerfile  streamlit_app.py
web/deploy/: docker-compose.yaml
web/deploy/terraform/: README.md
web/deploy/terraform/modules/iam/policies/: assume-role.json.tftpl
