[project]
name = "osm-dashboard"
version = "2.0.0"
description = "Interactive dashboard for OpenSciMetrics — open data and code sharing rates across funders, journals, and institutions"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "open science",
  "data sharing",
  "scientific transparency",
  "dashboard",
]
dependencies = [
  "dash>=2.14",
  "plotly>=5.18",
  "pandas>=2.0",
  "gunicorn>=21.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit>=4.2.0",
]

[project.urls]
homepage = "https://opensciencemetrics.org"
source = "https://github.com/nimh-dsst/osm-dashboard"
issues = "https://github.com/nimh-dsst/osm-dashboard/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
indent-width = 4
